--- a/exo-vue_avance/package.json
+++ b/exo-vue_avance/package.json
@@ -10,10 +10,10 @@
   "dependencies": {
     "-": "^0.0.1",
     "axios": "^1.1.3",
+    "pinia": "^2.0.23",
     "save": "^2.9.0",
     "vue": "^3.2.13",
-    "vue-router": "^4.0.3",
-    "vuex": "^4.0.0"
+    "vue-router": "^4.0.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-eslint": "~5.0.0",
